@@ -19,6 +19,72 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|event
+operator|.
+name|ItemEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ConcurrentHashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ConcurrentMap
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -109,72 +175,6 @@ name|LoggerFactory
 import|;
 end_import
 
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|event
-operator|.
-name|ItemEvent
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|HashSet
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Set
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ConcurrentHashMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ConcurrentMap
-import|;
-end_import
-
 begin_comment
 comment|/**  * @since 4.1  */
 end_comment
@@ -232,6 +232,9 @@ name|GeneratorsTabController
 parameter_list|(
 name|Class
 name|type
+parameter_list|,
+name|ProjectController
+name|projectController
 parameter_list|)
 block|{
 name|this
@@ -257,6 +260,12 @@ operator|new
 name|HashSet
 argument_list|<>
 argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|projectController
+operator|=
+name|projectController
 expr_stmt|;
 block|}
 specifier|public
@@ -289,6 +298,11 @@ init|=
 name|getDataMaps
 argument_list|()
 decl_stmt|;
+name|refreshSelectedMaps
+argument_list|(
+name|dataMaps
+argument_list|)
+expr_stmt|;
 name|generatorsPanels
 operator|.
 name|clear
@@ -709,6 +723,33 @@ block|{
 return|return
 name|selectedDataMaps
 return|;
+block|}
+specifier|private
+name|void
+name|refreshSelectedMaps
+parameter_list|(
+name|Collection
+argument_list|<
+name|DataMap
+argument_list|>
+name|dataMaps
+parameter_list|)
+block|{
+name|selectedDataMaps
+operator|.
+name|removeIf
+argument_list|(
+name|dataMap
+lambda|->
+operator|!
+name|dataMaps
+operator|.
+name|contains
+argument_list|(
+name|dataMap
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
